turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:7: error: unclosed string literal
  "
  ^Kerr40:10: error: unclosed string literal
  gauche(45);leveCrayon();recule(60);gauche(45);recule(30);droite(90);recule(30);gauche(45)"
                                                                                           ^Kerr40:7: error: illegal start of statement
  "
  ^Kerr40:10: error: ';' expected but something found.
  gauche(45);leveCrayon();recule(60);gauche(45);recule(30);droite(90);recule(30);gauche(45)"
                                                                                           ^